src/Login/login.css
* {
  margin: 0;
  padding: 0;
}

.login-form {
  background-color: rgba(113, 120, 148, 0.8);
  width: 40%;
}

.login-quote {
  margin-bottom: 5em;
  -webkit-mask-image: linear-gradient(#000, rgba(0, 0, 0, 0.3));
  mask-image: linear-gradient(#000, rgba(0, 0, 0, 0.3));
}

.login-image {
  background: linear-gradient(to bottom, #3bba9c8a, #7077935e),
    url("/public/images/mountain-login-bg.jpg") no-repeat center center/cover;
}

.login-logo {
  margin-bottom: 5em;
  height: 10em;
}

.login-icon {
  margin-bottom: 1em;
  font-size: 2em;
}
.login-link {
  color: #3bba9c;
}

.btn-color {
  background-color: #3bba9c;
  color: #eee;
}

.btn-color:hover {
  background-color: #2e3047;
  color: #eee;
}

.login-divider:after,
.login-divider:before {
  content: "";
  flex: 1;
  height: 1px;
  background: #eee;
}

